# Eduva-Assistant

./: .gitignore  AGENT_README.md  COMPLETION_SUMMARY.md  Dockerfile  RAILWAY_DEPLOYMENT_GUIDE.md  RAILWAY_SETUP.md  RAILWAY_SIMPLE_GUIDE.md  README.md  docker-compose.yml  langgraph.json  pyproject.toml  railway.yml  start-evolution.sh  supervisord.conf  test_agent.py
app/: lifespan.py  main.py  router.py
app/agent/: __init__.py  agent.py  setup.py
app/agent/tools/: __init__.py  time_tool.py
app/core/: config.py  mongo_db.py
app/models/: webhook.py
app/routes/: health.py  webhook.py
app/science_bot/: __init__.py  agent.py  conversation_manager.py  dependencies.py  processor.py  schemas.py  service.py
app/science_bot/agent/: __init__.py  graph.py  schemas.py  tools.py
app/science_bot/agent/prompts/: agro_system_prompt.py  answer_generator_prompt.py  document_selector_prompt.py  system_prompt.py
app/science_bot/agent/tools/search_documents/: service.py  tool.py
app/science_bot/core/: conversation_manager.py  service.py
app/services/: evolution_service.py
docs/: README.md
docs/1-arquitectura/: 1-arquitectura-general.md
docs/2-componentes/: 2.1-evolution-api.md  2.2-postgresql.md  2.3-redis.md  2.4-fastapi.md  2.5-langgraph.md  2.6-mongodb-atlas.md  2.7-railway.md
docs/3-flujo-de-datos/: 3.1-recepcion-mensaje.md  3.2-procesamiento-agente.md  3.3-busqueda-documentos.md  3.4-respuesta-usuario.md
docs/4-servicios-externos/: 4.1-openai-api.md  4.2-evolution-integracion.md  4.3-mongodb-vectores.md
docs/5-modelo-agente/: 5.1-estructura-grafo.md  5.2-herramientas.md  5.3-prompts.md  5.4-contexto-conversacion.md
docs/6-base-de-datos/: 6.1-colecciones-mongodb.md  6.2-embeddings.md  6.3-busqueda-semantica.md
docs/7-deployment/: 7.1-railway-setup.md  7.2-variables-entorno.md  7.3-monitoreo.md
docs/8-diagramas/: 8.1-arquitectura-completa.md  8.2-flujo-mensaje.md  8.3-grafo-langgraph.md
test/: README.md  __init__.py  configure_webhook.py  list_instances.py  test_config.py
